--- a/interactions/templates/view_notes.html
+++ b/interactions/templates/view_notes.html
@@ -2,11 +2,10 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>iaroapp - Notes</title>
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <title>iaroapp - Notes</title>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 {% endblock %}
-
 
 {% block content %}
     <div class="row">
@@ -37,19 +36,23 @@
                                     {{ note.timestamp|time:"H:i" }}
                                 </div>
                                 <div class="user__info mb-2">
-                                    <img src="{% if note.sender.employeeprofile.avatar.url %}{{ note.sender.employeeprofile.avatar.url }}
-                                                {% else %}{% static 'images/avatar.png' %}{% endif %}"
+                                    <img src="
+                                            {% if note.sender.employeeprofile.avatar.url %}{{ note.sender.employeeprofile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
                                          alt="{{ note.sender.username }}'s avatar"
-                                         class="avatar">
-                                        <span class="text-bolder">
-                                            {{ note.sender.username }}:
-                                        </span>
-                                        {{ note.content }}
+                                         class="avatar"
+                                         onclick="openAvatarModal(this.src)">
+                                    <span class="text-bolder username"
+                                          onclick="openAvatarModal(this.previousElementSibling.src)">
+                                    {{ note.sender.username }}:
+                                </span>
+                                    {{ note.content|safe }}
                                 </div>
                             </div>
                         {% endfor %}
                     </div>
-                    <button id="show-more-received" class="w-100 btn mt-4 bg-gradient-primary" data-type="received">Show More</button>
+                    <button id="show-more-received" class="w-100 btn mt-4 bg-gradient-primary" data-type="received">Show
+                        More
+                    </button>
                 </div>
             </div>
         </div>
@@ -72,22 +75,24 @@
                                                  alt="{{ branch.name }}'s avatar"
                                                  class="avatar">
                                             <span class="text-bolder">
-                            {{ branch.name }}{% if not forloop.last or note.receivers.exists %}, {% endif %}
-                        </span>
+                                            {{ branch.name }}{% if not forloop.last or note.receivers.exists %}
+                                                , {% endif %}
+                                        </span>
                                         {% endfor %}
                                         {% for receiver in note.receivers.all %}
                                             <img src="
-                                                    {% if receiver.employeeprofile.avatar.url %}{{ receiver.employeeprofile.avatar.url }}
-                                {% else %}{% static 'images/avatar.png' %}{% endif %}"
+                                                    {% if receiver.employeeprofile.avatar.url %}{{ receiver.employeeprofile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
                                                  alt="{{ receiver.username }}'s avatar"
-                                                 class="avatar">
-                                            <span class="text-bolder">
-                            {{ receiver.username }}{% if not forloop.last %}, {% endif %}
-                        </span>
+                                                 class="avatar"
+                                                 onclick="openAvatarModal(this.src)">
+                                            <span class="text-bolder username"
+                                                  onclick="openAvatarModal(this.previousElementSibling.src)">
+                                            {{ receiver.username }}{% if not forloop.last %}, {% endif %}
+                                        </span>
                                         {% endfor %}
                                     {% endwith %}
                                     <span class="text-bolder" style="margin-left: -4px;">:</span>
-                                    {{ note.content }}
+                                    {{ note.content|safe }}
                                 </div>
                             </div>
                         {% endfor %}
@@ -97,8 +102,14 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <!-- Modal for Full-Size Avatar -->
+    <div id="avatarModal" class="avatar-modal">
+        <span class="avatar-close" onclick="closeAvatarModal()">&times;</span>
+        <img class="avatar-modal-content" id="fullSizeAvatar">
+    </div>
+
 
 
     <style>
@@ -108,9 +119,11 @@
             height: 30px;
             border-radius: 50%;
         }
+
         .title {
             display: none !important;
         }
+
         body.dark-page textarea {
             background-color: #323b55 !important;
         }
@@ -118,6 +131,7 @@
         #received-notes {
             justify-content: center;
         }
+
         .note-item {
             border-bottom: 1px solid rgba(131, 146, 171, 0.2);
         }
@@ -181,115 +195,234 @@
             background-color: rgba(242, 241, 248, 0.1);
         }
 
-
         .select2-results__option--highlighted {
             background-color: rgba(193, 213, 238, 0.5) !important;
+        }
+
+        a.docs__link {
+            color: #d63384 !important;
+            font-weight: bold;
+        }
+    </style>
+
+    <style>
+        .avatar-modal {
+            display: none;
+            position: fixed;
+            z-index: 10000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(5px);
+            align-items: center;
+            justify-content: center;
+        }
+
+        .avatar-modal-content {
+            margin: auto;
+            display: block;
+            max-width: 80%;
+            max-height: 80%;
+            border-radius: 10px;
+        }
+
+        .avatar-close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .avatar-close:hover,
+        .avatar-close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .avatar, .username {
+            cursor: pointer;
         }
     </style>
 {% endblock content %}
 
 {% block extra_js %}
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('#id_receivers').select2({
-            placeholder: "Select users",
-            allowClear: true,
-            closeOnSelect: false,
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#id_receivers').select2({
+                placeholder: "Select People",
+                allowClear: true,
+                closeOnSelect: false,
+            });
+            $('#id_branches').select2({
+                placeholder: "Select Branches",
+                allowClear: true,
+                closeOnSelect: false,
+            });
+
+            {% if form.fields.document %}
+                $('#id_document').select2({
+                    placeholder: "Select Document",
+                    allowClear: true,
+                    closeOnSelect: true,
+                });
+            {% endif %}
         });
-        $('#id_branches').select2({
-            placeholder: "Select branches",
-            allowClear: true,
-            closeOnSelect: false,
-        });
-    });
-</script>
+    </script>
 
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-    const showMoreButtons = document.querySelectorAll("button[id^='show-more']");
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            function openAvatarModal(src) {
+                var modal = document.getElementById("avatarModal");
+                var modalImg = document.getElementById("fullSizeAvatar");
+                modal.style.display = "flex";
+                modalImg.src = src;
+            }
 
-    showMoreButtons.forEach(button => {
-        button.addEventListener("click", function () {
-            const type = this.getAttribute("data-type");
-            const notesContainer = document.getElementById(`${type}-notes`);
-            const offset = notesContainer.getElementsByClassName("note-item").length;
+            function closeAvatarModal() {
+                var modal = document.getElementById("avatarModal");
+                modal.style.display = "none";
+            }
 
-            fetch(`load-more-notes/?offset=${offset}&type=${type}`)
-                .then(response => response.json())
-                .then(data => {
-                    const notes = data[`${type}_notes`];
-                    notes.forEach(note => {
-                        const noteDiv = document.createElement("div");
-                        noteDiv.classList.add("note-item");
+            window.onclick = function (event) {
+                var modal = document.getElementById("avatarModal");
+                if (event.target === modal) {
+                    modal.style.display = "none";
+                }
+            };
 
-                        let noteTime = `
+            function addAvatarListeners(container) {
+                container.querySelectorAll('.avatar').forEach(img => {
+                    img.addEventListener('click', function () {
+                        openAvatarModal(this.src);
+                    });
+                });
+
+                container.querySelectorAll('.username').forEach(name => {
+                    name.addEventListener('click', function () {
+                        openAvatarModal(this.previousElementSibling.src);
+                    });
+                });
+            }
+
+            // Add listeners for initially rendered content
+            addAvatarListeners(document);
+
+            // Handling dynamically loaded notes
+            const showMoreButtons = document.querySelectorAll("button[id^='show-more']");
+
+            showMoreButtons.forEach(button => {
+                button.addEventListener("click", function () {
+                    const type = this.getAttribute("data-type");
+                    const notesContainer = document.getElementById(`${type}-notes`);
+                    const offset = notesContainer.getElementsByClassName("note-item").length;
+
+                    fetch(`load-more-notes/?offset=${offset}&type=${type}`)
+                        .then(response => response.json())
+                        .then(data => {
+                            const notes = data[`${type}_notes`];
+                            notes.forEach(note => {
+                                const noteDiv = document.createElement("div");
+                                noteDiv.classList.add("note-item");
+
+                                let noteTime = `
                             <div class="note__time d-flex justify-content-center mt-4 text-xxs text-secondary">
                                 ${note.timestamp_date}, ${note.timestamp_time}
                             </div>
                         `;
 
-                        let noteInfo = '';
-                        if (type === 'received') {
-                            noteInfo = noteTime + `
+                                let noteInfo = '';
+                                if (type === 'received') {
+                                    noteInfo = noteTime + `
                                 <div class="user__info mb-2">
                                     <img src="${note.sender_avatar ? note.sender_avatar : '{% static "images/avatar.png" %}'}"
                                          alt="${note.sender_username}'s avatar"
+                                         class="avatar"
                                          style="width: 32px; height: 32px; border-radius: 50%; background-color: #483d8b">
-                                    <span class="text-bolder">${note.sender_username}</span>
+                                    <span class="text-bolder username">${note.sender_username}</span>
                                     <span class="text-bolder" style="margin-left: -4px;">:</span>
                                     ${note.content}
                                 </div>
                             `;
-                        } else {
-                            let recipientsArray = [];
-                            if (note.branches) {
-                                note.branches.forEach(branch => {
-                                    recipientsArray.push(`
+                                } else {
+                                    let recipientsArray = [];
+                                    if (note.branches) {
+                                        note.branches.forEach(branch => {
+                                            recipientsArray.push(`
                                         <img src="{% static 'images/avatar.png' %}"
                                              alt="${branch.name}'s avatar"
+                                             class="avatar"
                                              style="width: 30px; height: 30px; border-radius: 50%; background-color: #483d8b">
-                                        <span class="text-bolder">${branch.name}</span>
+                                        <span class="text-bolder username">${branch.name}</span>
                                     `);
-                                });
-                            }
+                                        });
+                                    }
 
-                            if (note.receivers) {
-                                note.receivers.forEach(receiver => {
-                                    recipientsArray.push(`
+                                    if (note.receivers) {
+                                        note.receivers.forEach(receiver => {
+                                            recipientsArray.push(`
                                         <img src="${receiver.avatar ? receiver.avatar : '{% static "images/avatar.png" %}'}"
                                              alt="${receiver.username}'s avatar"
+                                             class="avatar"
                                              style="width: 30px; height: 30px; border-radius: 50%; background-color: #483d8b">
-                                        <span class="text-bolder">${receiver.username}</span>
+                                        <span class="text-bolder username">${receiver.username}</span>
                                     `);
-                                });
-                            }
+                                        });
+                                    }
 
-                            let recipientsInfo = recipientsArray.join(', ');
-                            recipientsInfo += '<span class="text-bolder" style="margin-left: -4px;">:</span> ';
+                                    let recipientsInfo = recipientsArray.join(', ');
+                                    recipientsInfo += '<span class="text-bolder" style="margin-left: -4px;">:</span> ';
 
-                            let contentInfo = `<span>${note.content}</span>`;
+                                    let contentInfo = `<span>${note.content}</span>`;
 
-                            noteInfo = noteTime + `
+                                    noteInfo = noteTime + `
                                 <div class="user__info mb-2">
                                     ${recipientsInfo}${contentInfo}
                                 </div>
                             `;
-                        }
+                                }
 
-                        noteDiv.innerHTML = noteInfo;
-                        notesContainer.appendChild(noteDiv);
-                    });
-                })
-                .catch(error => console.log(error));
+                                noteDiv.innerHTML = noteInfo;
+                                notesContainer.appendChild(noteDiv);
+
+                                // Add listeners to the newly added content
+                                addAvatarListeners(noteDiv);
+                            });
+                        })
+                        .catch(error => console.log(error));
+                });
+            });
         });
-    });
-});
 
-</script>
+    </script>
 
+    <script>
+        function openAvatarModal(src) {
+            var modal = document.getElementById("avatarModal");
+            var modalImg = document.getElementById("fullSizeAvatar");
+            modal.style.display = "flex";
+            modalImg.src = src;
+        }
 
+        function closeAvatarModal() {
+            var modal = document.getElementById("avatarModal");
+            modal.style.display = "none";
+        }
 
+        window.onclick = function (event) {
+            var modal = document.getElementById("avatarModal");
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        }
 
+    </script>
 {% endblock extra_js %}
